#8 Make timezone flexible

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 APPLICATION_NAME: "GoScope Debug"
 APPLICATION_ID: "goscope-debug"
-WATCHER_DATABASE_CONNECTION: "root:root@tcp(127.0.0.1:3306)/go_scope"
+GOSCOPE_DATABASE_CONNECTION: "root:root@tcp(127.0.0.1:3306)/go_scope"
+APPLICATION_TIMEZONE: "Europe/Amsterdam"
