--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
-APPLICATION_NAME: "GoScope Debug"
 APPLICATION_ID: "goscope-debug"
-GOSCOPE_DATABASE_CONNECTION: "root:root@tcp(127.0.0.1:3306)/go_scope"
+APPLICATION_NAME: "GoScope Debug"
 APPLICATION_TIMEZONE: "Europe/Amsterdam"
+GOSCOPE_DATABASE_CONNECTION: "root:root@tcp(127.0.0.1:3306)/go_scope"
+GOSCOPE_DATABASE_TYPE: "mysql"
+GOSCOPE_ENTRIES_PER_PAGE: 50
