--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -19,7 +19,7 @@ jobs:
           version: v1.29
 
           # Optional: working directory, useful for monorepos
-          # working-directory: somedir
+          working-directory: goscope
 
           # Optional: golangci-lint command line arguments.
           args: -p=bugs,complexity,format,performance,style,unused
