--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ sudo: false
 install: true
 script:
   - go build -o app
+  - curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.27.0
+  - $(go env GOPATH)/bin/golangci-lint run -p=bugs,complexity,format,performance,style,unused
