--- a/static/goscope/package.json
+++ b/static/goscope/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
+    "highlight.js": "^10.1.2",
+    "ngx-highlightjs": "^4.1.1",
     "raisincss": "^1.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
