--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,6 @@ matrix:
       install:
         - npm
       script:
-        - npm run lint
+        - cd static/goscope
+        - npm install
+        - ng lint
