--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,4 @@ matrix:
         - cd static/goscope && npm install
       script:
         - ng lint
+        - ng build --prod --output-hashing none --base-href /goscope/
