--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,7 @@
     "@angular/platform-browser": "~10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
-    "highlight.js": "^10.1.2",
-    "ngx-highlightjs": "^4.1.1",
+    "prismjs": "^1.21.0",
     "raisincss": "^1.1.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
