--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ matrix:
       install:
         - cd frontend && npm install
       script:
-        - ng build --prod --output-hashing none --base-href /goscope/
+        - npm run build
