--- a/.env
+++ b/.env
@@ -3,4 +3,5 @@ APPLICATION_NAME: "GoScope Debug"
 APPLICATION_TIMEZONE: "Europe/Amsterdam"
 GOSCOPE_DATABASE_CONNECTION: "root:root@tcp(127.0.0.1:3306)/go_scope"
 GOSCOPE_DATABASE_TYPE: "mysql"
-GOSCOPE_ENTRIES_PER_PAGE: 50
+GOSCOPE_ENTRIES_PER_PAGE: 100
+GOSCOPE_DISABLE_FRONTEND: false
