--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ GOSCOPE_DATABASE_CONNECTION: "root:root@tcp(127.0.0.1:3306)/go_scope"
 GOSCOPE_DATABASE_TYPE: "mysql"
 GOSCOPE_ENTRIES_PER_PAGE: 100
 GOSCOPE_DISABLE_FRONTEND: false
+GOSCOPE_DATABASE_MAX_OPEN_CONNECTIONS: 10
+GOSCOPE_DATABASE_MAX_IDLE_CONNECTIONS: 5
+GOSCOPE_DATABASE_MAX_CONN_LIFETIME: 10
