--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,11 +19,14 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "webpack": "^4.44.1"
+    "webpack": "^4.44.1",
+    "prismjs": "^1.21.0",
+    "babel-plugin-prismjs": "^2.0.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
     "@types/mocha": "^5.2.4",
+    "@types/prismjs": "^1.16.1",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "^4.5.0",
