--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,12 @@
     "@fortawesome/vue-fontawesome": "^0.1.10",
     "@johmun/vue-tags-input": "^2.1.0",
     "axios": "^0.19.2",
+    "babel-plugin-prismjs": "^2.0.1",
     "core-js": "^3.6.5",
+    "prismjs": "^1.21.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "webpack": "^4.44.1",
-    "prismjs": "^1.21.0",
-    "babel-plugin-prismjs": "^2.0.1"
+    "webpack": "^4.44.1"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
