--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -12,6 +12,9 @@ jobs:
     name: gobuild
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: gobuild
-      - run: go build
+      - name: Install Go
+        uses: actions/setup-go@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Build
+        run: go build
