--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Build
-        run: go build
+        run: go build -o app
