--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -19,4 +19,4 @@ jobs:
           check-latest: true
       - run: cd frontend
       - run: npm install
-      - run: npm test
+      - run: npm run build
