--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           node-version: '12'
           check-latest: true
-      - run: cd frontend
-      - run: npm install
-      - run: npm run build
+      - name: Build
+        working-directory: ./frontend
+        run: |
+          npm install
+          npm run build
